Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36566

SELECT create_temporary_table_binlog_formats should show exactly what it is SET to

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 12.0(EOL)
    • 12.0.1
    • Variables
    • None

    Description

      When the new variable create_temporary_table_binlog_formats is set to 'mixed' the SELECT shows a different value 'MIXED,STATEMENT'.

      11.8.1-opt>SET create_temporary_table_binlog_formats = 'mixed';
      Query OK, 0 rows affected (0.000 sec)
       
      11.8.1-opt>SELECT @@create_temporary_table_binlog_formats;
      +-----------------------------------------+
      | @@create_temporary_table_binlog_formats |
      +-----------------------------------------+
      | MIXED,STATEMENT                         |
      +-----------------------------------------+
      1 row in set (0.000 sec)
      

      Expected behavior:
      SQL-standard-wise SELECT should only show that which the variable was SET to.

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              susil.behera Susil Behera
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h 5m
                  1h 5m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.