MDEV-36566 SELECT create_temporary_table_binlog_formats should show exactly what it is SET to

added a warning